--- a/Employer-Websites.html
+++ b/Employer-Websites.html
@@ -2,10 +2,8 @@
 <ul>
         <li><a href="https://www.aucklandcouncil.govt.nz">Auckland Council</a></li>
         <li><a href="https://www.wsp.com/en-nz/"> WSP New Zealand </a></li>
-        <li><a href="https://www.mercury.co.nz/"> Mercury New Zealand (acquired Might River Power)</a></li>
+        <li><a href="https://www.mercury.co.nz/"> Mercury Energy New Zealand (purchased Mighty River Power)</a></li>
         <li><a href="https://www.corrections.govt.nz/">Department of Corrections</a></li>
         <li><a href="https://environment.govt.nz/">Ministry for the Environment</a></li>
         <li><a href="https://karratha.wa.gov.au/council">City of Karratha Council</a></li>
-        <li></li>
-        <li></li>
-</ul>
+        <li><a href="https://www.thesurveyingcompany.nz/">The Surveying Company</a></li></ul
