--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                     <li>2014 - 2017 Project Manager / Senior Planner at the Surveying Company</li>
                     <li>2014 - 2015 Senior Advisor Resource Management - consulting to Department of Corrections - fixed term contract</li>
                     <li>2011 - 2012 Strategic Planning Manager City of Karratha Western Australia - fixed term contract</li>
-                    <li>2010 - 2011 Consultant Environmental Advisor Might River Power - fixed term contract</li>
+                    <li>2010 - 2011 Consultant Environmental Advisor Mighty River Power - fixed term contract</li>
                     <li>2008 - 2010 Principal Planning Advisor Auckland Regional Council </li>
                     <li>2006 - 2008 Principal Policy Planner Franklin District Council (Auckland)</li>
                     <li>2002 - 2006 Various Policy-planning and Development-planning roles with Auckland Council </li>
                         <a href="./Employer-Websites.html">See list of Employer Websites here</a></ul>
     <hr>
         <h3>Work Responsibilities and Skills</h3>
-        <p>My career so far has involved working in teams developing environmental and planning policy proposals that weaves together expert advice and political directives. 
+        <p>My career so far has involved working in teams developing environmental and planning policy proposals that weave together expert advice and political directives. 
             <ul>
                 <li>providing timely advice to ministers of the Crown, local government elected representatives, and senior leaders.</li>
                 <li>leading community engagement in environmental policy and plan-making</li>
